@@ -810,11 +810,13 @@ void MainQSOEntryWidget::setModify(const bool _modify)
     if (modify)
     {
         OKButton->setText(tr("&Modify"));
+        clearButton->setText(tr("&Cancel"));
         realtimeCheckBox->setChecked (false);
     }
     else
     {
         OKButton->setText(tr("&Add"));
+        clearButton->setText(tr("&Clear"));
     }
     emit debugLog(Q_FUNC_INFO, "END", Debug);
 }
